--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Alaa Abdelkarim protofolio</title>
+		<title>Alaa Abdelkarim portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>This is<br />
-						Alaa Abdelkarim protofolio</h1>
+						Alaa Abdelkarim portfolio</h1>
 						<p>Jr.Data Analyst skilled in SQL, Power BI, Python, and Excel. 
 						<a href="https://www.linkedin.com/in/alaa-abdelkarim-038951223/">
 							View my LinkedIn </a>.</p>
