--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
 										<li><a href="https://github.com/alaaabdelkarim/projects/blob/main/Automating%20Crypto%20Website%20API%20Pull.ipynb" class="button">View project</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										
+										<h2><a href="https://github.com/alaaabdelkarim/projects/blob/main/Bike%20sales%20Project.xlsx">Bike Sales Project <br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/alaaabdelkarim/projects/blob/main/Bike%20sales%20Project.xlsx" class="image fit"><img src="pp.jpeg" alt="" /></a>
+									<p>Bike Sales Project using Excel.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/alaaabdelkarim/projects/blob/main/Bike%20sales%20Project.xlsx" class="button">View project</a></li>
+									</ul>
+								</article>
 							</section>
 
 
