--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 										<h2><a href="https://github.com/alaaabdelkarim/projects/blob/main/Bike%20sales%20Project.xlsx">Bike Sales Project <br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/alaaabdelkarim/projects/blob/main/Bike%20sales%20Project.xlsx" class="image fit"><img src="images/pp.jpeg" alt="" /></a>
+									<a href="https://github.com/alaaabdelkarim/projects/blob/main/Bike%20sales%20Project.xlsx" class="image fit"><img src="images/OIP.jpeg" alt="" /></a>
 									<p>Bike Sales Project using Excel.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/alaaabdelkarim/projects/blob/main/Bike%20sales%20Project.xlsx" class="button">View project</a></li>
